Menu z-index bug fixed

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -35,6 +35,7 @@ header {
 	position: fixed;
 	width: 100%;
 	background-color: rgba(255,255,255,.6);
+	z-index: 1000;
 }
 
 .custom-dropdown {
